--- a/index.html
+++ b/index.html
@@ -7,23 +7,28 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="title">Check Your Luck!!</div>
+    <div class="main flex">
 
-    <div class="main-container flex">
-        <div class="container-1">
-            <input type="number" name="" id="input-1">
-            <button id="btn-1">Lock</button>
-        </div>
+        <div class="title">Check Your Luck!!</div>
+        <div class="warning" id="warning">Please select number between 0 to 10</div>
+        <div class="main-container">
+            <div class="container">
+                <input type="number" name="" id="input-1" class="input-main">
+                <button id="btn-1" class="btn-main">Lock</button>
+                <input type="number" name="" id="input-2" class="input-main">
+                <button id="btn-2" class="btn-main">Lock</button>
+            </div>
 
-        <div class="container-2">
-            <input type="number" name="" id="input-2">
-            <button id="btn-2">Lock</button>
+            <button id="final-btn" class="flex final-btn">check who wins</button>
+
+            <div id="result">
+                winner : <span id="winner"></span>
+            </div>
+            
+            <div class="refresh">
+                <a href="index.html">Restart the game</a>
+            </div>
         </div>
-    </div>
-    
-    <button id="final-btn">check who wins</button>
-    <div id="result">
-        winner : <span id="winner"></span>
     </div>
     <script src="script.js"></script>
 </body>
