--- a/index.html
+++ b/index.html
@@ -10,19 +10,20 @@
     <div class="main flex">
 
         <div class="title">Check Your Luck!!</div>
-        <div class="warning" id="warning">Please select number between 0 to 10</div>
+        <div class="discription">player 1 select any numbet between 1 to 10 and player 2 guess the number</div>
+        <div class="warning" id="warning">Please select number between 1 to 10</div>
         <div class="main-container">
             <div class="container">
-                <input type="number" name="" id="input-1" class="input-main">
-                <button id="btn-1" class="btn-main">Lock</button>
-                <input type="number" name="" id="input-2" class="input-main">
-                <button id="btn-2" class="btn-main">Lock</button>
+                <input type="number" name="input-1" id="input-1" class="input-main">
+                <button id="btn-1" class="btn-main">Lock 1</button>
+                <input type="number" name="input-2" id="input-2" class="input-main">
+                <button id="btn-2" class="btn-main">Lock 2</button>
             </div>
 
             <button id="final-btn" class="flex final-btn">check who wins</button>
 
             <div id="result">
-                winner : <span id="winner"></span>
+                winner : <span id="winner">NULL</span>
             </div>
             
             <div class="refresh">
